# internal/lib/response/response.go
@@ -8,15 +8,24 @@ const (
 )
 
 type Response[T any] struct {
-	Status Status `json:"status"`
-	Data   *T     `json:"data,omitempty"`
-	Error  string `json:"error,omitempty"`
+	Status     Status      `json:"status"`
+	Data       *T          `json:"data,omitempty"`
+	Error      string      `json:"error,omitempty"`
+	Pagination *Pagination `json:"pagination,omitempty"`
 }
 
 func OK[T any](data *T) Response[T] {
 	return Response[T]{
 		Status: StatusOK,
 		Data:   data,
+	}
+}
+
+func OKWithPagination[T any](data *T, p *Pagination) Response[T] {
+	return Response[T]{
+		Status:     StatusOK,
+		Data:       data,
+		Pagination: p,
 	}
 }
 
